--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
             <label for="bhk">bhk</label>
             <select id="bhk" name="bhk">
               <option value="">Select</option>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
+              <option value="1">1BHK</option>
+              <option value="2">2BHK</option>
+              <option value="3">3BHK</option>
+              <option value="4">4BHK</option>
+              <option value="5">5BHK</option>
             </select>
           </div>
 
