--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="container">
         <h2 class="section-title">AI Property Prediction</h2>
         <!-- <form id="ai-form" class="ai-form"> -->
-        <form id="ai-form" class="ai-form" method="POST" action="http://127.0.0.1:8000/predict">
+        <form id="ai-form" class="ai-form" method="POST" action="https://housing-backend-4lag.onrender.com/predict">
         
     
           <!-- BHK -->
