--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <p class="hero-subtitle">
             Discover the perfect property with our AI-powered search and prediction system
           </p>
-          <a href="#property-search" class="btn btn-hero">Start Searching</a>
+          <a href="#property-predict-form" class="btn btn-hero">Start Searching</a>
         </div>
       </div>
     </section>
@@ -94,7 +94,7 @@
           <div class="form-group">
             <label for="bhk">BHK</label>
             <select id="bhk" name="bhk" required>
-              <option value="" disabled selected>Select</option>
+              <option value="">-- Select --</option>
               <option value="1">1BHK</option>
               <option value="2">2BHK</option>
               <option value="3">3BHK</option>
